# pdf-compressor-cli

./: .gitignore  CHANGELOG.md  README.md  compress_pdf.py  install.sh  pyproject.toml  requirements.txt  sample.txt  setup.sh
Formula/: pdf-compressor-cli.rb  pdf-compressor.rb
pdf-compressor/: README.md  compress_pdf.py  pyproject.toml  setup.sh
pdf-compressor/Formula/: pdf-compressor.rb
pdf-compressor/scripts/: gen_formula.py
scripts/: gen_formula.py
